<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pass">



    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"


        android:layout_weight="0.04"
        android:background="@drawable/hb"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/all"

            android:layout_weight="0.04"
            android:background="@color/pass"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/pass_1"
                android:textColor="@android:color/background_dark"
                android:textSize="5mm"
                tools:textColor="@color/common_google_signin_btn_text_dark_focused"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/all"
            android:layout_marginTop="1dp"
            android:layout_weight="0.04"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="hoo"
                    app:srcCompat="@drawable/home" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="goo"
                    app:srcCompat="@drawable/agane" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="nee"
                    app:srcCompat="@drawable/next" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row33"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/all"

                android:layout_weight="4"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/q"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"

                    android:text="@string/pass_2"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="4mm"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/q12"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/pass_3"

                    android:textColor="@android:color/holo_red_dark"
                    android:textStyle="bold"
                    android:textSize="4mm"/>

                <TextView

                    android:id="@+id/q15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/pass_4"
                    android:textColor="@android:color/holo_red_dark"

                    android:textStyle="bold"
                    android:textSize="4mm"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/all"
            android:layout_marginTop="1dp"
            android:layout_weight="0.04"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/happy" />



        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>