<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start"
    tools:context="com.send.a888hamz.fishing.go">
    <RelativeLayout
        android:id="@+id/kj"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-4147482011986095/7456346051"
            android:layout_centerHorizontal="true">
        </com.google.android.gms.ads.AdView>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"


            android:layout_weight="0.04"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/all"
                android:layout_marginTop="45dp"
                android:layout_weight="0.04"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/all"

                android:layout_weight="0.02"
                android:orientation="vertical">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/all"

                    android:layout_weight="0.04"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/all"

                    android:layout_weight="0.04"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/play"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"

                        android:onClick="goo"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        app:srcCompat="@drawable/play" />
                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/all"

                    android:layout_weight="0.04"
                    android:orientation="vertical">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/all"

                        android:layout_marginBottom="10dp"

                        android:layout_weight="0.04"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/button"
                            android:gravity="center"
                            android:onClick="ads"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:text="@string/go_1"
                            android:textSize="4.0mm"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/all"

                        android:layout_marginBottom="10dp"

                        android:layout_weight="0.04"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/button"
                            android:gravity="center"
                            android:onClick="star"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:text="@string/go_2"
                            android:textSize="4mm"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/all"

                        android:layout_marginBottom="10dp"

                        android:layout_weight="0.04"
                        android:autoSizeTextType="uniform"
                        android:orientation="vertical"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp">

                        <Button
                            android:id="@+id/button10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/button"
                            android:gravity="center"
                            android:onClick="exit"
                            android:text="@string/go_3"
                            android:textSize="4mm"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/all"
                android:layout_marginTop="45dp"
                android:layout_weight="0.04"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
